# gettext

./: .gitattributes  .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.scan
.github/workflows/: codeql.yml
gettext-runtime/: .gitignore  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  configure.scan  csharpcomp.sh  javacomp.sh  libtool
gettext-runtime/doc/: Makefile  Makefile.in
gettext-runtime/gnulib-lib/: Makefile  Makefile.in
gettext-runtime/intl/: Makefile
gettext-runtime/intl-csharp/: Makefile  Makefile.in
gettext-runtime/intl-java/: Makefile  Makefile.in
gettext-runtime/libasprintf/: Makefile  Makefile.am  Makefile.gnulib  Makefile.in  aclocal.m4  alloca.in.h  config.h.in  configure  configure.ac  configure.scan  libtool
gettext-runtime/libasprintf/gnulib-m4/: gnulib-cache.m4  gnulib-comp.m4
gettext-runtime/m4/: Makefile  Makefile.in
gettext-runtime/man/: Makefile  Makefile.in  envsubst.1  envsubst.1.html  gettext.1.html.in  gettext.1.in  ngettext.1.html.in  ngettext.1.in
gettext-runtime/po/: Makefile  Makefile.in  be.gmo  be.po  bg.gmo  bg.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  en@boldquot.po  en@quot.po  eo.po  es.po  et.po  fi.po  fr.po  ga.po  gettext-runtime.pot  gl.po  hr.po  id.po  it.po  ja.po  ko.po  nb.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  (+9 more)
gettext-runtime/src/: Makefile  Makefile.in
gettext-runtime/tests/: Makefile  Makefile.in
gettext-tools/: .gitattributes  .gitignore  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  configure.scan  csharpexec.sh  javaexec.sh  libtool
gettext-tools/doc/: Makefile  Makefile.in
gettext-tools/examples/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  configure.scan  installpaths
gettext-tools/examples/hello-c++-gnome/po/: ast.po  da.po  ga.po  hr.po  hu.po  ja.po  ru.po  sl.po
gettext-tools/examples/hello-c++-kde/po/: ast.po  da.po  ga.po  hr.po  hu.po  ja.po  ru.po  sl.po
gettext-tools/examples/hello-c++-qt/po/: ast.po  da.po  ga.po  hr.po  hu.po  ja.po  ru.po  sl.po
gettext-tools/examples/hello-c++-wxwidgets/po/: ast.po  da.po  ga.po  hr.po  hu.po  ja.po  ru.po  sl.po
gettext-tools/examples/hello-c++/po/: ast.po  da.po  ga.po  hr.po  hu.po  ja.po  ru.po  sl.po
gettext-tools/examples/hello-c-gnome/po/: ast.po  da.po  ga.po  hr.po  hu.po  ja.po  ru.po  sl.po
gettext-tools/examples/hello-c/po/: ast.po  da.po  ga.po  hr.po  hu.po  ja.po  ru.po  sl.po
gettext-tools/examples/hello-clisp/po/: ast.po  da.po  ga.po  hr.po  hu.po  ja.po  ru.po  sl.po
gettext-tools/examples/hello-csharp-forms/po/: ast.po  da.po  ga.po  hr.po  hu.po  ja.po  ru.po  sl.po
gettext-tools/examples/hello-csharp/po/: ast.po  da.po  ga.po  hr.po  hu.po  ja.po  ru.po  sl.po
gettext-tools/examples/hello-gawk/po/: ast.po  da.po  ga.po  hr.po  hu.po  ja.po  ru.po  sl.po
gettext-tools/examples/hello-guile/po/: ast.po  da.po  ga.po  hr.po  hu.po  ja.po  ru.po  sl.po
gettext-tools/examples/hello-java-awt/po/: ast.po  da.po  ga.po  hr.po  hu.po  ja.po  ru.po  sl.po
gettext-tools/examples/hello-java-qtjambi/po/: ast.po  da.po  ga.po  hr.po  hu.po  ja.po  ru.po  sl.po
gettext-tools/examples/hello-java-swing/po/: ast.po  da.po  ga.po  hr.po  hu.po  ja.po  ru.po  sl.po
gettext-tools/examples/hello-java/po/: ast.po  da.po  ga.po  hr.po  hu.po  ja.po  ru.po  sl.po
gettext-tools/examples/hello-librep/po/: ast.po  da.po  ga.po  hr.po  hu.po  ja.po  ru.po  sl.po
gettext-tools/examples/hello-objc-gnome/po/: ast.po  da.po  ga.po  hr.po  hu.po  ja.po  ru.po  sl.po
gettext-tools/examples/hello-objc-gnustep/po/: ast.po  da.po  ga.po  hr.po  hu.po  ja.po  ru.po  sl.po
gettext-tools/examples/hello-objc/po/: ast.po  da.po  ga.po  hr.po  hu.po  ja.po  ru.po  sl.po
gettext-tools/examples/hello-pascal/po/: ast.po  da.po  ga.po  hr.po  hu.po  ja.po  ru.po  sl.po
gettext-tools/examples/hello-perl/po/: ast.po  da.po  ga.po  hr.po  hu.po  ja.po  ru.po  sl.po
gettext-tools/examples/hello-php/po/: ast.po  da.po  ga.po  hr.po  hu.po  ja.po  ru.po  sl.po
gettext-tools/examples/hello-python/po/: ast.po  da.po  ga.po  hr.po  hu.po  ja.po  ru.po  sl.po
gettext-tools/examples/hello-sh/po/: ast.po  da.po  ga.po  hr.po  hu.po  ja.po  ru.po  sl.po
gettext-tools/examples/hello-smalltalk/po/: ast.po  da.po  ga.po  hr.po  hu.po  ja.po  ru.po  sl.po
gettext-tools/examples/hello-tcl-tk/po/: ast.po  da.po  ga.po  hr.po  hu.po  ja.po  ru.po  sl.po
gettext-tools/examples/hello-tcl/po/: ast.po  da.po  ga.po  hr.po  hu.po  ja.po  ru.po  sl.po
gettext-tools/examples/hello-ycp/po/: ast.po  da.po  ga.po  hr.po  hu.po  ja.po  ru.po  sl.po
gettext-tools/examples/po/: Makefile  Makefile.in  af.po  ast.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  fi.po  fr.po  ga.po  gettext-examples.pot  gl.po  hr.po  hu.po  id.po  it.po  ja.po  ky.po  lv.po  ms.po  mt.po  nb.po  nl.po  pl.po  pt.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po  (+2 more)
gettext-tools/gnulib-lib/: Makefile  Makefile.in
gettext-tools/gnulib-tests/: Makefile  Makefile.in
gettext-tools/intl/: Makefile
gettext-tools/libgettextpo/: Makefile  Makefile.am  Makefile.in  exported.sh  gettext.h  hash.h  iconv_open-aix.h  iconv_open-hpux.h  iconv_open-irix.h  iconv_open-osf.h  iconv_open-solaris.h  moo.h
gettext-tools/libgrep/: Makefile  Makefile.in
gettext-tools/m4/: Makefile  Makefile.in
gettext-tools/man/: Makefile  Makefile.in
gettext-tools/misc/: Makefile  Makefile.in  autopoint  autopoint.in  gettextize
gettext-tools/po/: Makefile  Makefile.in  be.gmo  be.po  bg.gmo  bg.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  en@boldquot.gmo  en@boldquot.po  en@quot.po  es.gmo  es.po  et.gmo  et.po  eu.gmo  eu.po  fi.gmo  fi.po  fr.gmo  (+48 more)
gnulib-local/: Makefile  Makefile.in
m4/: gl_sys_types_h_requirer.m4
po/: .gitignore  Makefile  Makefile.in
(+14 files in other folders)
